Fixing deployment bugs

--- a/src/app/user/bulk-employee-upload/bulk-employee-upload.component.html
+++ b/src/app/user/bulk-employee-upload/bulk-employee-upload.component.html
@@ -37,7 +37,7 @@
               </button>
             </div> -->
 
-            <button (click)="uploadStaffsInfo()" class="btn btn-primary">Upload all</button>
+            <button (click)="uploadStaffsInfo()" class="btn btn-primary">Verify NIN and Save</button>
             <p>Queue length: {{ htmlWorkbookJSON?.length }}</p>
             <form [formGroup]="form" autocomplete="off">
               <div class="table-responsive">
