--- a/src/app/transactions/topup-personal/topup-personal.component.html
+++ b/src/app/transactions/topup-personal/topup-personal.component.html
@@ -1,5 +1,5 @@
 <!-- EMI Starts-->
-<div class="row">
+<!-- <div class="row">
   <div class="mx-auto col-lg-6">
     <div class="card">
       <div class="card-header">
@@ -30,5 +30,5 @@
     </div>
   </div>
 
-</div>
+</div> -->
 <!-- EMI Ends-->
