[BUG FIX]: changed footer logo

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -11,7 +11,7 @@
 
   <div class="d-flex justify-content-between" >
     <div class="">
-      <img src="../../../../assets/svg/bucca_footer_logo.svg" alt="" class="img-fluid">
+      <img src="assets/images//NHGSFP.png" alt="" class="img-fluid">
     </div>
     <div class="footer-copyright">
       <p class="mb-0">© 2021 SID Digital / V2.1.</p>
