[BUG FIX]: Allowing CMP_ADM to order food

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -14,10 +14,10 @@
       <img src="assets/images//NHGSFP.png" alt="" class="img-fluid">
     </div>
     <div class="footer-copyright">
-      <p class="mb-0">© 2021 SID Digital / V2.1.</p>
+      <p class="mb-0">© 2024 NHGSFP / V2.1.</p>
     </div>
-    <div class="">
+    <!-- <div class="">
       <img src="../../../../assets/svg/sid_digital_favicon.svg" alt="" class="img-fluid">
-    </div>
+    </div> -->
   </div>
 </div>
