--- a/src/app/user/company-admin/company-admin-list/company-admin-list.component.html
+++ b/src/app/user/company-admin/company-admin-list/company-admin-list.component.html
@@ -60,7 +60,7 @@
 
           <!-- Staff Id Column -->
           <ng-container matColumnDef="staff_id">
-            <th mat-header-cell *matHeaderCellDef> Staff Id </th>
+            <th mat-header-cell *matHeaderCellDef> Student Id </th>
             <td mat-cell *matCellDef="let element"> {{element?.staff_id}} </td>
           </ng-container>
 
