--- a/src/app/user/staff/staff-level-create/staff-level-create.component.html
+++ b/src/app/user/staff/staff-level-create/staff-level-create.component.html
@@ -21,7 +21,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label class="col-form-label">Company Allocation</label>
+                <label class="col-form-label">School Allocation</label>
                 <input formControlName="company_paid" class="form-control" type="text" placeholder="E:G 500">
               </div>
             </div>
