--- a/src/app/user/company/company-create/company-create.component.html
+++ b/src/app/user/company/company-create/company-create.component.html
@@ -108,7 +108,7 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label class="col-form-label">School Name</label>
-                    <input formControlName="name" class="form-control" type="text" placeholder="Company Name" />
+                    <input formControlName="name" class="form-control" type="text" placeholder="School Name" />
                     <div *ngIf="
                         companyForm.controls.name.touched &&
                         companyForm.controls.name.errors?.required
