--- a/src/app/user/company/company-list/company-list.component.html
+++ b/src/app/user/company/company-list/company-list.component.html
@@ -58,7 +58,7 @@
 
           <!-- Balance Column -->
           <ng-container matColumnDef="sid_balance">
-            <th mat-header-cell *matHeaderCellDef>SID Balance </th>
+            <th mat-header-cell *matHeaderCellDef>Internal revenue </th>
             <td mat-cell *matCellDef="let element"> {{element.sid_balance | currency: "NGN" : "₦" : '1.0-0'}} </td>
           </ng-container>
           <!-- Action Column -->
