--- a/src/app/user/staff/staff-level-list/staff-level-list.component.html
+++ b/src/app/user/staff/staff-level-list/staff-level-list.component.html
@@ -6,7 +6,7 @@
       <div class="d-flex justify-content-between">
         <h5>{{title | titlecase}}</h5>
         <button *ngIf="isComp" [routerLink]="'/user/staff-level-create'" class="btn btn-primary">
-          Add Staff Level
+          Add Student Level
         </button>
       </div>
     </div>
@@ -46,7 +46,7 @@
 
           <!-- Balance Column -->
           <ng-container matColumnDef="balance">
-            <th mat-header-cell *matHeaderCellDef> Company Allocation </th>
+            <th mat-header-cell *matHeaderCellDef> School Allocation </th>
             <td mat-cell *matCellDef="let element"> {{element.company_paid | currency:"NGN" : "₦" : '1.0-0'}} </td>
           </ng-container>
 
