--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -9,12 +9,12 @@
     </div>
   </div> -->
 
-  <div class="d-flex justify-content-between" >
+  <div class="d-flex justify-content-between align-items-center" >
     <div class="">
-      <img src="assets/images//NHGSFP.png" alt="" class="img-fluid">
+      <img src="assets/images//NHGSFP.png" alt="" class="footer-log img-fluid">
     </div>
     <div class="footer-copyright">
-      <p class="mb-0">© 2024 NHGSFP / V2.1.</p>
+      <p class="mb-0">© 2024 NHGSFP / V1.0.0</p>
     </div>
     <!-- <div class="">
       <img src="../../../../assets/svg/sid_digital_favicon.svg" alt="" class="img-fluid">
