--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,14 @@
 <!-- Container-fluid starts-->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xl-7 xl-100 px-0 mx-0">
+    <div class="col-xl-12 xl-100 px-0 mx-0">
       <ng-container *ngIf="isComp || isSid || isAcct">
         <div class="container">
+          <h5>Students by LGA</h5>
           <owl-carousel-o [options]="customOptions">
             <ng-template carouselSlide
                          [id]="i + 1"
-                         *ngFor="let slide of slidesStore; let i=index">
+                         *ngFor="let slide of studentsByLGA; let i=index">
               <div class="item">
                 <div class="card">
                   <div class="card-body ecommerce-icons text-center">
@@ -24,7 +25,75 @@
         </div>
       </ng-container>
 
-      <ng-container>
+      <ng-container *ngIf="isComp || isSid || isAcct">
+        <div class="container">
+          <h5>Students by School</h5>
+          <owl-carousel-o [options]="customOptions">
+            <ng-template carouselSlide
+                         [id]="i + 1"
+                         *ngFor="let slide of studentsBySchool; let i=index">
+              <div class="item">
+                <div class="card">
+                  <div class="card-body ecommerce-icons text-center">
+                    <div><span>{{slide.title | uppercase}}</span></div>
+                    <h4 class="font-primary mb-0 counter"
+                        [CountTo]=slide.count
+                        [from]="0"
+                        [duration]="0.5"></h4>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+          </owl-carousel-o>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="isComp || isSid || isAcct">
+        <div class="container">
+          <h5>Cateres by LGA</h5>
+          <owl-carousel-o [options]="customOptions">
+            <ng-template carouselSlide
+                         [id]="i + 1"
+                         *ngFor="let slide of caterersByLGA; let i=index">
+              <div class="item">
+                <div class="card">
+                  <div class="card-body ecommerce-icons text-center">
+                    <div><span>{{slide.title | uppercase}}</span></div>
+                    <h4 class="font-primary mb-0 counter"
+                        [CountTo]=slide.count
+                        [from]="0"
+                        [duration]="0.5"></h4>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+          </owl-carousel-o>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="isComp || isSid || isAcct">
+        <div class="container">
+          <h5>Farmers by LGA</h5>
+          <owl-carousel-o [options]="customOptions">
+            <ng-template carouselSlide
+                         [id]="i + 1"
+                         *ngFor="let slide of farmersByLGA; let i=index">
+              <div class="item">
+                <div class="card">
+                  <div class="card-body ecommerce-icons text-center">
+                    <div><span>{{slide.title | uppercase}}</span></div>
+                    <h4 class="font-primary mb-0 counter"
+                        [CountTo]=slide.count
+                        [from]="0"
+                        [duration]="0.5"></h4>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+          </owl-carousel-o>
+        </div>
+      </ng-container>
+
+      <!-- <ng-container>
         <div class="row mx-0 px-0">
           <div class="col-md-12">
             <div class="card">
@@ -41,11 +110,6 @@
                       Count
                     </button>
                   </div>
-
-                  <!-- <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-                    <mat-button-toggle (click)="barChartData[0].data = dataset2" value="bold">Value</mat-button-toggle>
-                    <mat-button-toggle (click)="barChartData[0].data = dataset1" value="italic">Count</mat-button-toggle>
-                  </mat-button-toggle-group> -->
                 </div>
               </div>
               <div class="card-body charts-box">
@@ -62,26 +126,14 @@
                         (chartClick)="chartClicked($event)"></canvas>
               </div>
             </div>
-            <!-- <div class="card">
-              <div class="card-header">
-                <h5>Total Sale</h5>
-              </div>
-              <div class="card-body charts-box">
-                <div class="flot-chart-container">
-                  <canvas baseChart class="chart flot-chart-placeholder" id="graph123" [legend]="saleChartLegend"
-                    [data]="saleChartData" [labels]="saleChartLabels" [options]="saleChartOptions"
-                    [chartType]="saleChartType" [colors]="saleChartColors" height="80px"></canvas>
-                </div>
-              </div>
-            </div> -->
           </div>
         </div>
-      </ng-container>
+      </ng-container> -->
 
 
     </div>
 
-    <div class="col-xl-5 xl-100">
+    <!-- <div class="col-xl-5 xl-100">
       <div class="card">
         <div class="card-header">
           <h5>Today Orders</h5>
@@ -143,7 +195,7 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div [ngClass]="{'col-12': vendorReport?.length > 2, 'col-md-6': vendorReport?.length <=2}"
          class="row">
