--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
 
       <ng-container *ngIf="isComp || isSid || isAcct">
         <div class="container">
-          <h5>Cateres by LGA</h5>
+          <h5>Caterers by LGA</h5>
           <owl-carousel-o [options]="customOptions">
             <ng-template carouselSlide
                          [id]="i + 1"
