--- a/src/app/user/bulk-carterer-upload/bulk-carterer-upload.component.html
+++ b/src/app/user/bulk-carterer-upload/bulk-carterer-upload.component.html
@@ -15,7 +15,17 @@
           </div>
         </div>
         <div class="card-body">
-
+          <div class="example-loading-shade" *ngIf="isLoading">
+            <div class="loader-box">
+              <div class="loader">
+                <div class="line bg-primary"></div>
+                <div class="line bg-primary"></div>
+                <div class="line bg-primary"></div>
+                <div class="line bg-primary"></div>
+              </div>
+            </div>
+            <!-- <mat-spinner *ngIf="tableLoading"></mat-spinner> -->
+          </div>
           Preview
 
           <div *ngIf="htmlWorkbookJSON?.length > 0" @ifFadeSlideInOut class="col-12 upload-table">
