--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
     <div class="col-auto row">
       <ng-container *ngIf="isSid || isComp || isAcct">
-        <div class="col">
+        <div class="col-md">
           <div class="card">
             <div class="card-body ecommerce-icons text-center">
               <div><span>{{'Tot. no. of students' | uppercase}}</span></div>
@@ -12,7 +12,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md">
           <div class="card">
             <div class="card-body ecommerce-icons text-center">
               <div><span>{{'Tot. no. of Schools' | uppercase}}</span></div>
@@ -20,7 +20,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md">
           <div class="card">
             <div class="card-body ecommerce-icons text-center">
               <div><span>{{'Tot. no. of Caterers' | uppercase}}</span></div>
@@ -28,7 +28,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md">
           <div class="card">
             <div class="card-body ecommerce-icons text-center">
               <div><span>{{'Tot. no. of farmers' | uppercase}}</span></div>
