--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,16 +4,18 @@
   <app-auth-navbar [showNav]=true></app-auth-navbar>
 
   <div class="row justify-content-center align-items-center hero-section container-fluid px-5">
-    <div class="my-auto col-md-6">
+    <div class="my-auto col-md-8">
       <p class="hero-text-main">
-        Digital <span class="text-primary">Solution</span> For <span class="text-primary">Food</span> & <span
-          class="text-secondary-2">Delivery</span>.
+        Digital <span class="text-primary">Solution</span> For <span class="text-primary">Managing</span> School Feeding
+        <span class="text-secondary-2">Programme </span> Across The Country.
       </p>
       <p class="hero-description">
-        Lorem ipsum dolor sit amet consectetur. Elit risus quam malesuada eget cras integer maecenas.
+        The portal is designed to help maintain and upload the data of caterers, farmers, students, and schools across
+        each state and LGA for the school feeding project.
+        <!-- Lorem ipsum dolor sit amet consectetur. Elit risus quam malesuada eget cras integer maecenas. -->
       </p>
     </div>
-    <div class="col-md-6 d-flex justify-content-center gx-4">
+    <div class="col-md-4 d-flex justify-content-center gx-4">
       <img class="img-fluid" src="assets/images/hero-image.png" alt="">
     </div>
   </div>
@@ -21,18 +23,19 @@
   <section class="special-offers">
     <div class="mx-auto col-8">
       <p class="section-header text-center">
-        Today <span class="text-primary">Special</span> Offers
+        <span class="text-primary">Detailed Analysis</span> & <span class="text-secondary-2">Dashboard</span>
       </p>
-      <p class="section-description text-center my-5">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s
+      <p class="section-description text-center text- my-5">
+        Unlock insights with our comprehensive analysis and dynamic dashboard. Visualize your data with interactive
+        charts, monitor key metrics in real-time, and make informed decisions effortlessly. Elevate your strategy with
+        our user-friendly tools designed for precision and clarity. Explore your data like never before!
       </p>
 
       <div class="d-flex align-items-center justify-content-center px-4">
-        <img class="img-fluid px-4" src="assets/images/special-offer-1.png" alt="">
-        <img class="img-fluid px-4" src="assets/images/special-offer-2.png" alt="">
+        <img class="img-fluid gif px-4" src="assets/images/undraw_data_trends_re_2cdy.svg" alt="">
+        <!-- <img class="img-fluid px-4" src="assets/images/special-offer-2.png" alt="">
         <img class="img-fluid px-4" src="assets/images/special-offer-3.png" alt="">
-        <img class="img-fluid px-4" src="assets/images/special-offer-4.png" alt="">
+        <img class="img-fluid px-4" src="assets/images/special-offer-4.png" alt=""> -->
       </div>
     </div>
   </section>
@@ -42,41 +45,43 @@
       <div class="col-md-5 d-flex justify-content-center">
         <img class="img-fluid" src="assets/images/digitizing-image.png" alt="">
       </div>
-      <div class="my-auto col-md-7">
+      <div class="col-md-7">
         <p class="section-header col-md-10">
-          Digitizing all <span class="text-primary">your </span> <span class="text-secondary-2">catering</span> needs.
-        </p>
-        <p class="section-description my-5">
-          Lorem ipsum dolor sit amet consectetur. Elit risus quam malesuada eget cras integer maecenas.
+          Digitizing all <span class="text-primary">Functions </span> <span class="text-secondary-2">Of The
+            School</span> Feeding Programme.
         </p>
 
         <div class="d-flex">
           <div class="mr-4">
             <p class="section-description">
               <img class="img-fluid mr-2" src="assets/images/digitizing-1.png" alt="">
-              <span> Online Order </span>
+              <span> Manage Farmers </span>
             </p>
             <p class="section-description">
               <img class="img-fluid mr-2" src="assets/images/digitizing-2.png" alt="">
-              <span> Pre-Reservation </span>
+              <span> Manage Caterers </span>
             </p>
             <p class="section-description">
               <img class="img-fluid mr-2" src="assets/images/digitizing-3.png" alt="">
-              <span> Special Offer </span>
+              <span> Manage Schools </span>
+            </p>
+            <p class="section-description">
+              <img class="img-fluid mr-2" src="assets/images/digitizing-4.png" alt="">
+              <span> Manage Students </span>
             </p>
           </div>
           <div>
             <p class="section-description">
               <img class="img-fluid mr-2" src="assets/images/digitizing-4.png" alt="">
-              <span> 24/7 Service </span>
+              <span> Ministry of Agric. </span>
             </p>
             <p class="section-description">
               <img class="img-fluid mr-2" src="assets/images/digitizing-5.png" alt="">
-              <span> Organized Foodhut Places </span>
+              <span> Ministry of Health </span>
             </p>
             <p class="section-description">
               <img class="img-fluid mr-2" src="assets/images/digitizing-6.png" alt="">
-              <span> Clean Kitchen </span>
+              <span> Ministry of Education </span>
             </p>
           </div>
         </div>
@@ -88,42 +93,22 @@
     </div>
   </section>
 
-  <section class="all-ages">
-    <div class="mx-auto col-4">
-      <p class="section-header text-center">
-        <span class="text-primary">Menu</span> suited for
-        all <span class="text-secondary-2">ages</span>
-      </p>
-    </div>
-    <div class="d-flex align-items-center justify-content-center my-5">
-      <img class="img-fluid px-4" src="assets/images/special-offer-1.png" alt="">
-      <img class="img-fluid px-4" src="assets/images/special-offer-2.png" alt="">
-      <img class="img-fluid px-4" src="assets/images/special-offer-3.png" alt="">
-      <img class="img-fluid px-4" src="assets/images/special-offer-4.png" alt="">
-    </div>
-    <div class="d-flex align-items-center justify-content-center">
-      <img class="img-fluid px-4" src="assets/images/special-offer-1.png" alt="">
-      <img class="img-fluid px-4" src="assets/images/special-offer-2.png" alt="">
-      <img class="img-fluid px-4" src="assets/images/special-offer-3.png" alt="">
-      <img class="img-fluid px-4" src="assets/images/special-offer-4.png" alt="">
-    </div>
-  </section>
-
   <section class="download-section">
     <div class="row justify-content-center align-items-center">
 
-      <div class="my-auto col-md-7">
+      <div class="col-md-7">
         <p class="section-header col-md-10">
-          It’s Now <span class="text-primary">More Easy</span> to <span class="text-secondary-2">Order</span> by Our
+          It’s Now <span class="text-primary">More Easy</span> to <span class="text-secondary-2">Manage</span> by Our
           Mobile <span class="text-primary">App</span>
         </p>
-        <p class="section-description col-md-8 my-5">
-          Lorem ipsum dolor sit amet consectetur. Elit risus quam malesuada eget cras integer maecenas.
+        <p class="section-description col-md-8 my-4">
+          Managing is now a breeze with our revamped mobile app! Enjoy quick navigation, personalized tips, real-time
+          tracking, and secure payments—all in one place. Download now for the easiest ordering experience yet!
         </p>
 
         <div class="d-flex">
-        <img class="img-fluid mr-2" src="assets/images/mobile-playstore-badge.png" alt="">
-        <img class="img-fluid" src="assets/images/mobile-appstore-badge.png" alt="">
+          <img class="img-fluid mr-2" src="assets/images/mobile-playstore-badge.png" alt="">
+          <img class="img-fluid" src="assets/images/mobile-appstore-badge.png" alt="">
 
         </div>
       </div>
