--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -32,7 +32,7 @@
       </p>
 
       <div class="d-flex align-items-center justify-content-center px-4">
-        <img class="img-fluid gif px-4" src="assets/images/undraw_data_trends_re_2cdy.svg" alt="">
+        <img class="img-fluid px-4" src="assets/images/undraw_data_trends_re_2cdy.svg" alt="">
         <!-- <img class="img-fluid px-4" src="assets/images/special-offer-2.png" alt="">
         <img class="img-fluid px-4" src="assets/images/special-offer-3.png" alt="">
         <img class="img-fluid px-4" src="assets/images/special-offer-4.png" alt=""> -->
