--- a/src/app/landing/auth-navbar/auth-navbar.component.html
+++ b/src/app/landing/auth-navbar/auth-navbar.component.html
@@ -9,12 +9,9 @@
           <button *ngIf="showNav" class="navbar-toggler" type="button" [matMenuTriggerFor]="menu">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- <mat-menu #menu="matMenu">
-            <button mat-menu-item>What we do</button>
-            <button mat-menu-item>Be a Food Partner</button>
-            <button mat-menu-item>Contact Us</button>
+          <mat-menu #menu="matMenu">
             <a mat-button (click)="openDialog()" class="btn btn-primary nav-link auth-links">Login</a>
-          </mat-menu> -->
+          </mat-menu>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- <ul *ngIf="showNav" class="navbar-nav navbar-nav-scroll">
               <li class="mr-3 nav-item">
