--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,8 +3,8 @@
   <!-- Navbar -->
   <app-auth-navbar [showNav]=true></app-auth-navbar>
 
-  <div class="row justify-content-center align-items-center hero-section container-fluid px-5">
-    <div class="my-auto col-md-8">
+  <div class="row justify-content-center align-items-center hero-section container-fluid">
+    <div class="my-md-auto col-md-8">
       <p class="hero-text-main">
         Digital <span class="text-primary">Solution</span> For <span class="text-primary">Managing</span> School Feeding
         <span class="text-secondary-2">Programme </span> Across The Country.
@@ -15,17 +15,17 @@
         <!-- Lorem ipsum dolor sit amet consectetur. Elit risus quam malesuada eget cras integer maecenas. -->
       </p>
     </div>
-    <div class="col-md-4 d-flex justify-content-center gx-4">
+    <div class="col-md-4 d-none d-md-flex justify-content-center gx-4">
       <img class="img-fluid" src="assets/images/hero-image.png" alt="">
     </div>
   </div>
 
   <section class="special-offers">
-    <div class="mx-auto col-8">
+    <div class="mx-auto col-md-8">
       <p class="section-header text-center">
         <span class="text-primary">Detailed Analysis</span> & <span class="text-secondary-2">Dashboard</span>
       </p>
-      <p class="section-description text-center text- my-5">
+      <p class="text-justify section-description text-center text- my-5">
         Unlock insights with our comprehensive analysis and dynamic dashboard. Visualize your data with interactive
         charts, monitor key metrics in real-time, and make informed decisions effortlessly. Elevate your strategy with
         our user-friendly tools designed for precision and clarity. Explore your data like never before!
@@ -113,7 +113,7 @@
         </div>
       </div>
 
-      <div class="col-md-5 d-flex justify-content-center">
+      <div class="col-md-5 d-none d-md-flex justify-content-center">
         <img class="img-fluid" src="assets/images/download-section.png" alt="">
       </div>
     </div>
